--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -214,46 +214,65 @@
                     "verification-finished": "Проверка завершена"
                 }
             },
-            "warnings": {
-                "msg": {
-                    "ManifestChecksum": "Предыдущий файл манифесте не совпадает с новым 🤔",
-                    "ConnectionTimeout": "У вас нестабильное соединение с интернетом 🥶",
-                    "ConnectionLost": "Соединение потеряно, попробуйте снова...",
-                    "ConnectionError": "Не удалось подключиться к Steam, попробуйте снова...",
-                    "Unknown": "Что-то странное произошло 🤔 Возможно ваш интернет барахлит."
+            "steam-download": {
+                "warnings": {
+                    "msg": {
+                        "ManifestChecksum": "Предыдущий файл манифесте не совпадает с новым 🤔",
+                        "ConnectionTimeout": "У вас нестабильное соединение с интернетом 🥶",
+                        "ConnectionLost": "Соединение потеряно, попробуйте снова...",
+                        "ConnectionError": "Не удалось подключиться к Steam, попробуйте снова...",
+                        "Unknown": "Что-то странное произошло 🤔 Возможно ваш интернет барахлит."
+                    }
+                },
+                "errors": {
+                    "titles": {
+                        "dotnet-required": "Требуется .NET 6"
+                    },
+                    "msg": {
+                        "401": "Похоже Steam не хочет, чтобы мы скачали Beat Saber 😢",
+                        "404": "Нет связи с серверами Steam.",
+                        "Password": "Неверный пароль.",
+                        "InvalidCredentials": "Неверные учетные данные для входа, неразрешенное соединение или слишком много попыток входа.",
+                        "NoManifest": "Файл манифеста не найден",
+                        "DirectoryCreate": "Не смогли создать нужные папки.",
+                        "NotAvailableApp": "Вы пытаетесь скачать Beat Saber, не купив её? 🤣",
+                        "DepotNotFound": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                        "NotCompleted": "Скачивание не завершилось ¯\\_(ツ)_/¯",
+                        "InvalidManifest": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                        "NoValidKey": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                        "NoManifestCode": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                        "Unknown": "Неизвестная ошибка ¯\\_(ツ)_/¯",
+                        "NoServer": "Нет связи с серверами Steam.",
+                        "NotAllowed": "Внезапно, вы не можете скачать Beat Saber 🥱",
+                        "ConnectionTimeout": "Не удалось подключиться к Steam 😕",
+                        "SteamLib": "Если вы это видите, пожалуйста, сообщите о баге на GitHub с файлом логов.",
+                        "ConnectionError": "Не удалось подключиться к Steam за 10 попыток 🤯",
+                        "LicenceError": "Не удалось проверить наличие лицензии.",
+                        "RateLimitExceeded": "Слишком много попыток, вернитесь позже и попробуйте снова.",
+                        "TokenRejected": "Ваш токен для входа был отклонен 😕 Пожалуйста, попробуйте снова.",
+                        "AccessDenied": "Доступ к Steam был отклонен.",
+                        "dotnet-required": "Среда запуска .NET 6 должна быть установлена, чтобы скачать Beat Saber. Скачайте её с помощью кнопки ниже."
+                    },
+                    "actions": {
+                        "download-dotnet": "Скачать .NET 6"
+                    }
                 }
             },
-            "errors": {
-                "titles": {
-                    "dotnet-required": "Требуется .NET 6"
-                },
-                "msg": {
-                    "401": "Похоже Steam не хочет, чтобы мы скачали Beat Saber 😢",
-                    "404": "Нет связи с серверами Steam.",
-                    "Password": "Неверный пароль.",
-                    "InvalidCredentials": "Неверные учетные данные для входа, неразрешенное соединение или слишком много попыток входа.",
-                    "NoManifest": "Файл манифеста не найден",
-                    "DirectoryCreate": "Не смогли создать нужные папки.",
-                    "NotAvailableApp": "Вы пытаетесь скачать Beat Saber, не купив её? 🤣",
-                    "DepotNotFound": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
-                    "NotCompleted": "Скачивание не завершилось ¯\\_(ツ)_/¯",
-                    "InvalidManifest": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
-                    "NoValidKey": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
-                    "NoManifestCode": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
-                    "Unknown": "Неизвестная ошибка ¯\\_(ツ)_/¯",
-                    "NoServer": "Нет связи с серверами Steam.",
-                    "NotAllowed": "Внезапно, вы не можете скачать Beat Saber 🥱",
-                    "ConnectionTimeout": "Не удалось подключиться к Steam 😕",
-                    "SteamLib": "Если вы это видите, пожалуйста, сообщите о баге на GitHub с файлом логов.",
-                    "ConnectionError": "Не удалось подключиться к Steam за 10 попыток 🤯",
-                    "LicenceError": "Не удалось проверить наличие лицензии.",
-                    "RateLimitExceeded": "Слишком много попыток, вернитесь позже и попробуйте снова.",
-                    "TokenRejected": "Ваш токен для входа был отклонен 😕 Пожалуйста, попробуйте снова.",
-                    "AccessDenied": "Доступ к Steam был отклонен.",
-                    "dotnet-required": "Среда запуска .NET 6 должна быть установлена, чтобы скачать Beat Saber. Скачайте её с помощью кнопки ниже."
-                },
-                "actions": {
-                    "download-dotnet": "Скачать .NET 6"
+            "oculus-download": {
+                "errors": {
+                    "msg": {
+                        "DOWNLOAD_MANIFEST_FAILED": "Невозможно загрузить манифест этой версии.",
+                        "MANIFEST_FILE_NOT_FOUND": "Невозможно найти манифест этой версии.",
+                        "PARSE_MANIFEST_FILE_FAILED": "При чтении манифеста произошла ошибка.",
+                        "ALREADY_DOWNLOADING": "Версия уже загружается.",
+                        "UNABLE_TO_GET_MANIFEST": "Невозможно получить манифест, необходимый для загрузки.",
+                        "VERIFY_INTEGRITY_FAILED": "При проверке файлов произошла ошибка.",
+                        "SOME_FILES_FAILED_TO_DOWNLOAD": "Некоторые файлы не удалось загрузить.",
+                        "OCULUS_LOGIN_TIMED_OUT": "Получение токена входа заняло слишком много времени.",
+                        "OCULUS_LOGIN_WINDOW_CLOSED_BY_USER": "Окно входа в Meta было закрыто.",
+                        "NO_META_AUTH_TOKEN": "Невозможно получить токен входа в Meta, необходимый для загрузки.",
+                        "UNKNOWN_ERROR": "Произошла неизвестная ошибка."
+                    }
                 }
             }
         },
