--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -214,46 +214,65 @@
                     "verification-finished": "Verifikation Erfolgreich"
                 }
             },
-            "warnings": {
-                "msg": {
-                    "ManifestChecksum": "Die zuvor heruntergeladene Manifest stimmt nicht mit dem neuen überein 🤔",
-                    "ConnectionTimeout": "Deine Internetverbindung scheint instabil zu sein 🥶",
-                    "ConnectionLost": "Die Verbindung wurde unterbrochen, versuche es erneut...",
-                    "ConnectionError": "Kann keine Verbindung zu Steam herstellen, versuche es erneut...",
-                    "Unknown": "Etwas Seltsames ist passiert 🤔 Deine Verbindung ist wahrscheinlich instabil."
+            "steam-download": {
+                "warnings": {
+                    "msg": {
+                        "ManifestChecksum": "Die zuvor heruntergeladene Manifest stimmt nicht mit dem neuen überein 🤔",
+                        "ConnectionTimeout": "Deine Internetverbindung scheint instabil zu sein 🥶",
+                        "ConnectionLost": "Die Verbindung wurde unterbrochen, versuche es erneut...",
+                        "ConnectionError": "Kann keine Verbindung zu Steam herstellen, versuche es erneut...",
+                        "Unknown": "Etwas Seltsames ist passiert 🤔 Deine Verbindung ist wahrscheinlich instabil."
+                    }
+                },
+                "errors": {
+                    "titles": {
+                        "dotnet-required": ".NET 6 Benötigt"
+                    },
+                    "msg": {
+                        "401": "Steam scheint uns BeatSaber nicht herunterladen zu lassen 😢",
+                        "404": "Steam-Server können nicht kontaktiert werden.",
+                        "Password": "Passwort ist ungültig.",
+                        "InvalidCredentials": "Ungültige Anmeldedaten, nicht genehmigte Verbindung oder zu viele Anmeldeversuche.",
+                        "NoManifest": "Es wurde keine Manifest gefunden",
+                        "DirectoryCreate": "Die erforderlichen Ordner können nicht installiert werden.",
+                        "NotAvailableApp": "Versuchst du, Beat Saber herunterzuladen, wenn Du es nicht hast? 🤣",
+                        "DepotNotFound": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
+                        "NotCompleted": "Der Download konnte nicht beendet werden ¯\\_(ツ)_/¯",
+                        "InvalidManifest": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
+                        "NoValidKey": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
+                        "NoManifestCode": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
+                        "Unknown": "Ein Unbekannter Fehler ist aufgetreten ¯\\_(ツ)_/¯",
+                        "NoServer": "Steam-Server können nicht kontaktiert werden.",
+                        "NotAllowed": "Anscheinend darfst Du BeatSaber nicht herunterladen 🥱",
+                        "ConnectionTimeout": "Kann keine Verbindung zu Steam herstellen 😕",
+                        "SteamLib": "Wenn dieser Fehler auftritt, melde den Fehler auf Github mit Protokollen, bitte.",
+                        "ConnectionError": "Kann nach 10 Versuchen keine Verbindung zu Steam herstellen 🤯",
+                        "LicenceError": "Die Liste der Lizenzen kann nicht abgerufen werden.",
+                        "RateLimitExceeded": "Du hast es zu oft versucht, warte eine Weile und versuche es später erneut.",
+                        "TokenRejected": "Ihr Anmeldetoken wurde abgelehnt 😕 Bitte versuchen Sie es erneut.",
+                        "AccessDenied": "Der Zugang zu Steam wurde verweigert.",
+                        "dotnet-required": ".NET 6 Runtime muss installiert sein, um eine Version von BeatSaber herunterzuladen. Lade es herunter, indem Du auf die Schaltfläche unten klickst."
+                    },
+                    "actions": {
+                        "download-dotnet": ".NET 6 Herunterladen"
+                    }
                 }
             },
-            "errors": {
-                "titles": {
-                    "dotnet-required": ".NET 6 Benötigt"
-                },
-                "msg": {
-                    "401": "Steam scheint uns BeatSaber nicht herunterladen zu lassen 😢",
-                    "404": "Steam-Server können nicht kontaktiert werden.",
-                    "Password": "Passwort ist ungültig.",
-                    "InvalidCredentials": "Ungültige Anmeldedaten, nicht genehmigte Verbindung oder zu viele Anmeldeversuche.",
-                    "NoManifest": "Es wurde keine Manifest gefunden",
-                    "DirectoryCreate": "Die erforderlichen Ordner können nicht installiert werden.",
-                    "NotAvailableApp": "Versuchst du, Beat Saber herunterzuladen, wenn Du es nicht hast? 🤣",
-                    "DepotNotFound": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
-                    "NotCompleted": "Der Download konnte nicht beendet werden ¯\\_(ツ)_/¯",
-                    "InvalidManifest": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
-                    "NoValidKey": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
-                    "NoManifestCode": "BeatSaber kann nicht heruntergeladen werden 😥 versuche es später noch einmal 😕",
-                    "Unknown": "Ein Unbekannter Fehler ist aufgetreten ¯\\_(ツ)_/¯",
-                    "NoServer": "Steam-Server können nicht kontaktiert werden.",
-                    "NotAllowed": "Anscheinend darfst Du BeatSaber nicht herunterladen 🥱",
-                    "ConnectionTimeout": "Kann keine Verbindung zu Steam herstellen 😕",
-                    "SteamLib": "Wenn dieser Fehler auftritt, melde den Fehler auf Github mit Protokollen, bitte.",
-                    "ConnectionError": "Kann nach 10 Versuchen keine Verbindung zu Steam herstellen 🤯",
-                    "LicenceError": "Die Liste der Lizenzen kann nicht abgerufen werden.",
-                    "RateLimitExceeded": "Du hast es zu oft versucht, warte eine Weile und versuche es später erneut.",
-                    "TokenRejected": "Ihr Anmeldetoken wurde abgelehnt 😕 Bitte versuchen Sie es erneut.",
-                    "AccessDenied": "Der Zugang zu Steam wurde verweigert.",
-                    "dotnet-required": ".NET 6 Runtime muss installiert sein, um eine Version von BeatSaber herunterzuladen. Lade es herunter, indem Du auf die Schaltfläche unten klickst."
-                },
-                "actions": {
-                    "download-dotnet": ".NET 6 Herunterladen"
+            "oculus-download": {
+                "errors": {
+                    "msg": {
+                        "DOWNLOAD_MANIFEST_FAILED": "Unmöglich, das Manifest für diese Version herunterzuladen.",
+                        "MANIFEST_FILE_NOT_FOUND": "Unmöglich, das Manifest für diese Version zu finden.",
+                        "PARSE_MANIFEST_FILE_FAILED": "Beim Lesen des Manifests ist ein Fehler aufgetreten.",
+                        "ALREADY_DOWNLOADING": "Eine Version wird bereits heruntergeladen.",
+                        "UNABLE_TO_GET_MANIFEST": "Unmöglich, das für den Download erforderliche Manifest zu erhalten.",
+                        "VERIFY_INTEGRITY_FAILED": "Beim Überprüfen der Dateien ist ein Fehler aufgetreten.",
+                        "SOME_FILES_FAILED_TO_DOWNLOAD": "Einige Dateien konnten nicht heruntergeladen werden.",
+                        "OCULUS_LOGIN_TIMED_OUT": "Das Anmelde-Token hat zu lange gedauert, um abgerufen zu werden.",
+                        "OCULUS_LOGIN_WINDOW_CLOSED_BY_USER": "Das Meta Anmeldefenster wurde geschlossen.",
+                        "NO_META_AUTH_TOKEN": "Unmöglich, das für den Download erforderliche Meta-Anmelde-Token zu erhalten.",
+                        "UNKNOWN_ERROR": "Ein unbekannter Fehler ist aufgetreten."
+                    }
                 }
             }
         },
