--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -209,8 +209,8 @@
         "bs-download": {
             "success": {
                 "titles": {
-                    "download-success": "Téléchargement terminé 🎉",
-                    "verification-finished": "Vérification terminée 🎉"
+                    "download-success": "Téléchargement terminé",
+                    "verification-finished": "Vérification terminée"
                 }
             },
             "steam-download": {
@@ -257,7 +257,7 @@
             "oculus-download": {
                 "errors": {
                     "msg": {
-                        "DOWNLOAD_MANIFEST_FAILED": "Impossible de télécharger le manifest de cette version.",
+                        "DOWNLOAD_MANIFEST_FAILED": "Impossible de télécharger le manifest de cette version; vote token de connexion est peut-être invalide.",
                         "MANIFEST_FILE_NOT_FOUND": "Impossible de trouver le manifest de cette version.",
                         "PARSE_MANIFEST_FILE_FAILED": "Une erreur c'est produite lors de la lecture du manifest.",
                         "ALREADY_DOWNLOADING": "Une version est déjà en cours de téléchargement.",
